fix horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
   min-height: 100vh;
 }
 
@@ -283,3 +282,4 @@ form input[type=submit]:hover
   }
 
 }
+
